<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="com.example.aboutMe.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="true"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/greetings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="true"
            android:paddingBottom="@dimen/small_padding"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bio_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:contentDescription="@string/bio"
                    android:lineSpacingMultiplier="@dimen/lineSpaceMultiOnePointTwo"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/bio"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cv_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:lineSpacingMultiplier="@dimen/lineSpaceMultiOnePointTwo"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/C_v"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:lineSpacingMultiplier="@dimen/lineSpaceMultiOnePointTwo"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@={myName.name}"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/your_name_please"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/catch_name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColor="@color/purple_200"
                    android:textColorHint="@color/teal_200"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:text="@string/Done_for_button"
                    app:backgroundTint="#404E50"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>
